feat: Implement raid event logic and UI for managing raid lobbies and battles
- Added `RaidEvent` class to handle raid logic including player management, status updates, and battle timing.
- Created `EventScreen` to display available raid lobbies with filtering options for rarity and talent.
- Developed `RaidBattleScreen` for displaying ongoing battles, including countdown timers and boss information.
- Implemented `RaidLobbyScreen` for managing player interactions in raid lobbies, including joining, leaving, and starting battles.
- Introduced `FramedCardImageWidget` for displaying card images with rarity-based framing.
- Added `StatusIconsWidget` to show active buffs and debuffs for cards.
- Integrated UI updates to reflect real-time changes in raid status and player actions.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.0.0
   collection: ^1.17.0
   shared_preferences: ^2.0.0
+  uuid: ^4.3.3 # Add this line
+
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +67,8 @@ flutter:
     - assets/cards/naruto/
     - assets/cards/one_piece/
     - assets/cards/teen_titans/
-    - assets/Themes/ # This will include all files in this folder, including Hinata.jpg and spirit.png
+    - assets/Themes/
+    - assets/cards/event_cards/powerpuff_girls/ # This will include all files in this folder, including Hinata.jpg and spirit.png
     # - assets/cards/naruto/spirit.png # Or add individually if you prefer
 
   # An image asset can refer to one or more resolution-specific "variants", see
