feat: Implement user authentication with Firebase, including login and registration screens
- Added LoginScreen and RegisterScreen for user authentication.
- Integrated Firebase Auth for user login and registration functionality.
- Created DevAdminTools for developer use to manage user currency and cards.
- Updated Firebase configuration files and added necessary dependencies.
- Enhanced the RaidLobbyScreen to allow team card selection and validation before starting a raid.
- Modified FramedCardImageWidget to support frame color overrides based on card rarity.
- Updated pubspec.yaml and pubspec.lock to include Firebase dependencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   collection: ^1.17.0
   shared_preferences: ^2.0.0
   uuid: ^4.3.3 # Add this line
+  firebase_core: ^3.3.0 # Add Firebase Core
+  firebase_auth: ^5.2.0 # Add Firebase Auth
+  cloud_firestore: ^5.1.0 # Add Cloud Firestore
 
 
 dev_dependencies:
