feat: Enhance developer admin tools for currency and card management
- Added utility imports for leveling costs and rarity stats.
- Refactored `addCurrencyToUser` method for improved readability and error handling.
- Implemented Firestore updates for user currency and shards with detailed logging.
- Introduced `addCardToUser` method to facilitate card addition with rarity and level adjustments.
- Enhanced card creation logic to include proper stat calculations based on rarity and level.
- Updated Firestore integration for adding cards to user inventory with error handling.

feat: Improve UI components for card display and status icons

- Updated `FramedCardImageWidget` to include debugging print statements and ensure asset paths are correct.
- Enhanced `StatusIconsWidget` to allow customizable icon sizes and improved tooltip descriptions for buffs and debuffs.

chore: Update dependencies in pubspec.yaml and pubspec.lock

- Updated Firebase and related packages to latest stable versions for improved functionality and security.
- Adjusted asset paths in pubspec.yaml for better organization.

feat: Add new screens for Raid and Talent guides

- Created `RaidGuideScreen` to provide users with detailed information on raid battles.
- Developed `TalentGuideScreen` to explain talent mechanics and usage within the game.

feat: Introduce shard display utilities

- Added `shard_display_utils.dart` for managing shard icons and colors based on shard types.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,9 @@ dependencies:
   collection: ^1.17.0
   shared_preferences: ^2.0.0
   uuid: ^4.3.3 # Add this line
-  firebase_core: ^3.3.0 # Add Firebase Core
-  firebase_auth: ^5.2.0 # Add Firebase Auth
-  cloud_firestore: ^5.1.0 # Add Cloud Firestore
+  firebase_core: ^2.32.0 # Updated to latest stable
+  firebase_auth: ^4.20.0 # Updated to latest stable
+  cloud_firestore: ^4.17.4 # Updated to latest stable
 
 
 dev_dependencies:
@@ -67,12 +67,13 @@ flutter:
 
     # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/ # Keep this for general assets if any are directly under assets/
+    - assets/Themes/
+    - assets/cards/
     - assets/cards/naruto/
     - assets/cards/one_piece/
     - assets/cards/teen_titans/
-    - assets/Themes/
-    - assets/cards/event_cards/powerpuff_girls/ # This will include all files in this folder, including Hinata.jpg and spirit.png
-    # - assets/cards/naruto/spirit.png # Or add individually if you prefer
+    - assets/cards/event_cards/powerpuff_girls/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
